first test passing

--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,17 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "license": "MIT",
+  "scripts": {
+    "dev": "parcel ./src/index.html -p 3000"
+  },
   "devDependencies": {
-    "jest": "^22.4.2"
+    "jest": "^22.4.2",
+    "parcel-bundler": "^1.6.2"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
