--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "babel-node src/index.js"
+  },
+  "dependencies": {
+    "ramda": "^0.25.0",
+    "uuid": "^3.2.1",
+    "ws": "^4.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^22.4.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.66.0",
+    "jest": "^22.4.2"
+  }
 }
