--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,11 @@
     "postcss-modules": "^1.1.0"
   },
   "dependencies": {
+    "bulma": "^0.6.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1"
   }
 }
