--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["flow"]
+  "presets": [
+    "flow",
+    "react",
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "safari >= 7"]
+        }
+      }
+    ]
+  ],
+  "plugins": ["transform-object-rest-spread"]
 }
