--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,16 @@
   "main": "index.html",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel ./src/index.html -p 3000"
+    "dev": "parcel ./src/index.html -p 3000",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "flow-bin": "^0.66.0",
     "jest": "^22.4.2",
     "node-sass": "^4.7.2",
@@ -22,5 +27,10 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|scss|sass)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
