--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,7 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "flow-bin": "^0.66.0",
     "jest": "^22.4.2",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
@@ -22,6 +20,7 @@
   },
   "dependencies": {
     "bulma": "^0.6.2",
+    "folktale": "^2.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
