--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,13 @@
     "jest": "^22.4.2",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
-    "postcss-modules": "^1.1.0"
+    "postcss-modules": "^1.1.0",
+    "redux-logger": "^3.0.6"
   },
   "dependencies": {
     "bulma": "^0.6.2",
     "folktale": "^2.1.0",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
