--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "babel-node src/index.js"
   },
   "dependencies": {
+    "folktale": "^2.1.0",
     "ramda": "^0.25.0",
     "uuid": "^3.2.1",
     "ws": "^4.1.0"
