--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "babel-node src/index.js"
+    "dev": "babel-node src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "folktale": "^2.1.0",
